feat(front-end) - add basic filtering to query builder as last step

--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "electron": "^3.0.9",
     "electron-builder": "^20.34.0",
     "electron-is-dev": "^1.0.1",
+    "electron-store": "^2.0.0",
     "knex": "^0.15.2",
     "pg": "^7.6.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
+    "react-scrollable-list": "^1.2.0",
+    "react-select": "^2.1.1",
     "squel": "^5.12.2",
     "wait-on": "^3.2.0"
   },
