--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.5.1",
+    "@material-ui/icons": "^3.0.1",
+    "classnames": "^2.2.6",
     "concurrently": "^4.0.1",
     "electron": "^3.0.9",
     "electron-builder": "^20.34.0",
@@ -11,6 +14,7 @@
     "knex": "^0.15.2",
     "pg": "^7.6.1",
     "react": "^16.6.3",
+    "react-bootstrap-table-next": "^1.4.1",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
     "react-scrollable-list": "^1.2.0",
@@ -36,6 +40,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "electron-react-devtools": "^0.5.3",
     "electron-rebuild": "^1.8.2"
   }
 }
