--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.5.1",
     "concurrently": "^4.0.1",
     "electron": "^3.0.9",
     "electron-builder": "^20.34.0",
@@ -10,6 +11,7 @@
     "electron-store": "^2.0.0",
     "flickity": "^2.1.2",
     "knex": "^0.15.2",
+    "material-ui": "^1.0.0-beta.47",
     "pg": "^7.6.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
