--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "electron-test",
-  "version": "0.1.0",
+  "name": "ez-ql",
+  "version": "0.0.1",
+  "license": "MIT",
+  "description": "desktop GUI for db querying",
+  "author": "ez-ql team @ GH",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.5.1",
     "@material-ui/icons": "^3.0.1",
     "concurrently": "^4.0.1",
-    "electron": "^3.0.9",
-    "electron-builder": "^20.34.0",
     "electron-is-dev": "^1.0.1",
     "electron-store": "^2.0.0",
     "flickity": "^2.1.2",
@@ -26,13 +27,16 @@
     "squel": "^5.12.2",
     "wait-on": "^3.2.0"
   },
+  "homepage": "./",
   "main": "public/main.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron-dev": "concurrently \"BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\""
+    "electron-dev": "concurrently \"BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\"",
+    "preelectron-pack": "npm run build",
+    "electron-pack": "build public/main.js=build/main.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,7 +48,23 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "electron": "^3.0.9",
+    "electron-builder": "^20.34.0",
     "electron-react-devtools": "^0.5.3",
     "electron-rebuild": "^1.8.2"
+  },
+  "build": {
+    "appId": "com.electron.ez-ql",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*",
+      "./public/main.js",
+      "*.js",
+      "src/**/*"
+    ],
+    "extends": null,
+    "directories": {
+      "buildResources": "assets"
+    }
   }
 }
